...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtCurp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...

            <TextView
                android:id="@+id/txtOlvidasteCurp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtApellidoP"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtApellidoM"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtTelefonoAlt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtCalle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtNumero"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtColonia"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtAlcaldia"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtCodigoPostal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                app:errorIconDrawable="@null">
                <EditText
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                    android:background="@drawable/campos_circulares">
                    <EditText
                        android:id="@+id/txtContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
                        android:textColor="@android:color/black" />
                    <ImageButton
                        android:id="@+id/btnToggleContrasena"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
...
                    android:background="@drawable/campos_circulares">
                    <EditText
                        android:id="@+id/txtConfirmarContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
                        android:textColor="@android:color/black" />
                    <ImageButton
                        android:id="@+id/btnToggleConfirmarContrasena"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
...

                <CheckBox
                    android:id="@+id/checkTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/txtTerminosLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="60dp"
...
