...
        app:layout_constraintStart_toEndOf="@id/btnBackContainer"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Términos y Condiciones"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
...
